--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
 <div id="imageslide" class="all">
   <div class="imgs">
      <ul id="slides">    
-      <li><img src="images/slide/3_1.jpg" alt="no"></li>  
-      <li><img src="images/slide/3_2.jpg" alt="no"></li>  
-      <li><img src="images/slide/3_3.jpg" alt="no"></li>  
-      <li><img src="images/slide/3_4.jpg" alt="no"></li>  
-      <li><img src="images/slide/3_5.jpg" alt="no"></li>  
-      <li><img src="images/slide/3_6.jpg" alt="no"></li>  
-      <li><img src="images/slide/3_7.jpg" alt="no"></li>  
-      <li><img src="images/slide/3_8.jpg" alt="no"></li>  
-      <li><img src="images/slide/3_9.jpg" alt="no"></li>  
+      <li><img src="images/slide/1.jpg" alt="no"></li>  
+      <li><img src="images/slide/2.jpg" alt="no"></li>  
+      <li><img src="images/slide/3.jpg" alt="no"></li>  
+      <li><img src="images/slide/4.jpg" alt="no"></li>  
+      <li><img src="images/slide/5.jpg" alt="no"></li>  
+      <li><img src="images/slide/6.jpg" alt="no"></li>  
+     
 
     </ul>
     </div>
