--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>웨딩플랜</title>
+<title>회의 운영 </title>
 <link href="css/style.css" type="text/css" rel="stylesheet">
 <script src="javascript/script.js" defer="defer" type="text/javascript"></script>
 <script src="javascript/jquery-1.12.3.js" type="text/javascript"></script>
