--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>회의 운영 </title>
+<title>회의 운영 가이드</title>
 <link href="css/style.css" type="text/css" rel="stylesheet">
 <script src="javascript/script.js" defer="defer" type="text/javascript"></script>
 <script src="javascript/jquery-1.12.3.js" type="text/javascript"></script>
@@ -21,7 +21,9 @@
       <li><img src="images/slide/4.jpg" alt="no"></li>  
       <li><img src="images/slide/5.jpg" alt="no"></li>  
       <li><img src="images/slide/6.jpg" alt="no"></li>  
-     
+      <li><img src="images/slide/7.jpg" alt="no"></li>
+      <li><img src="images/slide/8.jpg" alt="no"></li>
+      <li><img src="images/slide/9.jpg" alt="no"></li>
 
     </ul>
     </div>
